회원 탈퇴 기능 추가 수정